needing to add media queries for mobile to align icons in row and fix footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,8 +130,18 @@ header img {
 }
 
 /* icons */
+@media only screen and (max-width: 470px) {
+  .icons {
+    margin-top: 3.77rem;
+  }
+
+  .icon {
+    margin-bottom: 1.54rem;
+  }
+}
+
 .icon-section {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   width: 100%;
 }
@@ -139,7 +149,8 @@ header img {
 .icons {
   display: inline-flex;
   margin-top: 3rem;
-  display: inline-flex;
+  display: flex;
+  flex-direction: row;
 }
 
 .icon {
